// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config/index .parseConfigs(env, defaultArgv) supports Bitbucket username/passwod 1`] = `
Object {
  "additionalReviewers": Array [],
  "aliases": Object {},
  "allowedPostUpgradeCommands": Array [],
  "ansible": Object {
    "fileMatch": Array [
      "(^|/)tasks/[^/]+\\\\.ya?ml$",
    ],
  },
  "ansible-galaxy": Object {
    "fileMatch": Array [
      "(^|/)requirements\\\\.ya?ml$",
    ],
  },
  "assignAutomerge": false,
  "assignees": Array [],
  "assigneesSampleSize": null,
  "autodiscover": false,
  "autodiscoverFilter": null,
  "automerge": false,
  "automergeComment": "automergeComment",
  "automergeType": "pr",
  "azureAutoComplete": false,
  "azureWorkItemId": 0,
  "baseBranches": Array [],
  "baseDir": null,
  "bazel": Object {
    "fileMatch": Array [
      "(^|/)WORKSPACE$",
      "\\\\.bzl$",
    ],
  },
  "bbUseDefaultReviewers": true,
  "binarySource": "auto",
  "branchName": "{{{branchPrefix}}}{{{managerBranchPrefix}}}{{{branchTopic}}}",
  "branchPrefix": "renovate/",
  "branchTopic": "{{{depNameSanitized}}}-{{{newMajor}}}{{#if isPatch}}.{{{newMinor}}}{{/if}}.x{{#if isLockfileUpdate}}-lockfile{{/if}}",
  "buildkite": Object {
    "commitMessageExtra": "to {{#if isMajor}}v{{{newMajor}}}{{else}}{{{newValue}}}{{/if}}",
    "commitMessageTopic": "buildkite plugin {{depName}}",
    "fileMatch": Array [
      "buildkite\\\\.ya?ml",
      "\\\\.buildkite/.+\\\\.ya?ml$",
    ],
    "managerBranchPrefix": "buildkite-",
  },
  "bumpVersion": null,
  "bundler": Object {
    "fileMatch": Array [
      "(^|/)Gemfile$",
    ],
    "versioning": "ruby",
  },
  "cacheDir": null,
  "cargo": Object {
    "commitMessageTopic": "Rust crate {{depName}}",
    "fileMatch": Array [
      "(^|/)Cargo.toml$",
    ],
    "managerBranchPrefix": "rust-",
    "rangeStrategy": "bump",
    "versioning": "cargo",
  },
  "cdnurl": Object {
    "fileMatch": Array [],
    "versioning": "semver",
  },
  "circleci": Object {
    "fileMatch": Array [
      "(^|/).circleci/config.yml$",
    ],
  },
  "cocoapods": Object {
    "fileMatch": Array [
      "(^|/)Podfile$",
    ],
    "versioning": "ruby",
  },
  "commitBody": null,
  "commitBodyTable": false,
  "commitMessage": "{{{commitMessagePrefix}}} {{{commitMessageAction}}} {{{commitMessageTopic}}} {{{commitMessageExtra}}} {{{commitMessageSuffix}}}",
  "commitMessageAction": "Update",
  "commitMessageExtra": "to {{#if isMajor}}v{{{newMajor}}}{{else}}{{#if isSingleVersion}}v{{{toVersion}}}{{else}}{{{newValue}}}{{/if}}{{/if}}",
  "commitMessagePrefix": null,
  "commitMessageSuffix": null,
  "commitMessageTopic": "dependency {{depName}}",
  "compatibility": Object {},
  "composer": Object {
    "fileMatch": Array [
      "(^|/)([\\\\w-]*)composer.json$",
    ],
    "versioning": "composer",
  },
  "composerIgnorePlatformReqs": true,
  "configWarningReuseIssue": true,
  "deps-edn": Object {
    "fileMatch": Array [
      "(^|/)deps\\\\.edn$",
    ],
    "versioning": "maven",
  },
  "description": Array [],
  "digest": Object {
    "branchTopic": "{{{depNameSanitized}}}-digest",
    "commitMessageExtra": "to {{newDigestShort}}",
    "commitMessageTopic": "{{{depName}}} commit hash",
  },
  "docker": Object {
    "versioning": "docker",
  },
  "docker-compose": Object {
    "fileMatch": Array [
      "(^|/)docker-compose[^/]*\\\\.ya?ml$",
    ],
  },
  "dockerMapDotfiles": false,
  "dockerUser": null,
  "dockerfile": Object {
    "fileMatch": Array [
      "(^|/|\\\\.)Dockerfile$",
      "(^|/)Dockerfile\\\\.[^/]*$",
    ],
  },
  "dotnet": Object {},
  "droneci": Object {
    "fileMatch": Array [
      "(^|/).drone.yml$",
    ],
  },
  "dryRun": false,
  "enabled": true,
  "enabledManagers": Array [],
  "encrypted": null,
  "endpoint": null,
  "excludeCommitPaths": Array [],
  "fileMatch": Array [],
  "followTag": null,
  "force": Object {
    "password": "pass",
    "platform": "bitbucket",
    "username": "user",
  },
  "forceCli": true,
  "forkMode": false,
  "git-submodules": Object {
    "enabled": false,
    "fileMatch": Array [
      "(^|/).gitmodules$",
    ],
    "versioning": "git",
  },
  "gitAuthor": null,
  "gitLabAutomerge": false,
  "gitPrivateKey": null,
  "github-actions": Object {
    "fileMatch": Array [
      "^\\\\.github/main.workflow$",
      "^\\\\.github/workflows/[^/]+\\\\.ya?ml$",
    ],
    "pinDigests": true,
  },
  "gitlabci": Object {
    "fileMatch": Array [
      "^\\\\.gitlab-ci\\\\.yml$",
    ],
  },
  "gitlabci-include": Object {
    "fileMatch": Array [
      "^\\\\.gitlab-ci\\\\.yml$",
    ],
  },
  "global": Object {
    "prBanner": undefined,
    "prFooter": "This PR has been generated by [Renovate Bot](https://github.com/renovatebot/renovate).",
  },
  "golang": Object {
    "commitMessageTopic": "module {{depNameShort}}",
  },
  "gomod": Object {
    "fileMatch": Array [
      "(^|/)go.mod$",
    ],
  },
  "gradle": Object {
    "fileMatch": Array [
      "\\\\.gradle(\\\\.kts)?$",
      "(^|/)gradle.properties$",
    ],
    "timeout": 600,
    "versioning": "gradle",
  },
  "gradle-wrapper": Object {
    "fileMatch": Array [
      "(^|/)gradle/wrapper/gradle-wrapper.properties$",
    ],
    "versioning": "gradle",
  },
  "group": Object {
    "branchTopic": "{{{groupSlug}}}",
    "commitMessageTopic": "{{{groupName}}}",
  },
  "groupName": null,
  "groupSlug": null,
  "helm-requirements": Object {
    "aliases": Object {
      "stable": "https://kubernetes-charts.storage.googleapis.com/",
    },
    "commitMessageTopic": "helm chart {{depName}}",
    "fileMatch": Array [
      "(^|/)requirements.yaml$",
    ],
  },
  "helm-values": Object {
    "commitMessageTopic": "helm values {{depName}}",
    "fileMatch": Array [
      "(^|/)values.yaml$",
    ],
  },
  "helmfile": Object {
    "aliases": Object {
      "stable": "https://kubernetes-charts.storage.googleapis.com/",
    },
    "commitMessageTopic": "helm chart {{depName}}",
    "fileMatch": Array [
      "(^|/)helmfile.yaml$",
    ],
  },
  "homebrew": Object {
    "commitMessageTopic": "Homebrew Formula {{depName}}",
    "fileMatch": Array [
      "^Formula/[^/]+[.]rb$",
    ],
    "managerBranchPrefix": "homebrew-",
  },
  "hostRules": Array [
    Object {
      "timeout": 60000,
    },
  ],
  "html": Object {
    "digest": Object {
      "enabled": false,
    },
    "fileMatch": Array [
      "\\\\.html?$",
    ],
    "pinDigests": false,
    "versioning": "semver",
  },
  "ignoreDeprecated": true,
  "ignoreDeps": Array [],
  "ignoreNpmrcFile": false,
  "ignorePaths": Array [
    "**/node_modules/**",
    "**/bower_components/**",
  ],
  "ignoreScripts": false,
  "ignoreUnstable": true,
  "includeForks": false,
  "includePaths": Array [],
  "java": Object {},
  "js": Object {},
  "kubernetes": Object {
    "fileMatch": Array [],
  },
  "kustomize": Object {
    "fileMatch": Array [
      "(^|/)kustomization\\\\.yaml",
    ],
  },
  "labels": Array [],
  "lazyGrouping": true,
  "leiningen": Object {
    "fileMatch": Array [
      "(^|/)project\\\\.clj$",
    ],
    "versioning": "maven",
  },
  "lockFileMaintenance": Object {
    "branchTopic": "lock-file-maintenance",
    "commitMessageAction": "Lock file maintenance",
    "commitMessageExtra": null,
    "commitMessageTopic": null,
    "enabled": false,
    "groupName": null,
    "prBodyDefinitions": Object {
      "Change": "All locks refreshed",
    },
    "rebaseStalePrs": true,
    "recreateClosed": true,
    "schedule": Array [
      "before 5am on monday",
    ],
  },
  "logContext": null,
  "logLevel": "info",
  "major": Object {},
  "managerBranchPrefix": "",
  "masterIssue": false,
  "masterIssueApproval": false,
  "masterIssueAutoclose": false,
  "masterIssueTitle": "Update Dependencies (Renovate Bot)",
  "maven": Object {
    "fileMatch": Array [
      "\\\\.pom\\\\.xml$",
      "(^|/)pom\\\\.xml$",
    ],
    "versioning": "maven",
  },
  "meteor": Object {
    "fileMatch": Array [
      "(^|/)package.js$",
    ],
  },
  "minor": Object {},
  "mix": Object {
    "fileMatch": Array [
      "(^|/)mix\\\\.exs$",
    ],
    "versioning": "hex",
  },
  "node": Object {
    "commitMessageTopic": "Node.js",
    "major": Object {
      "enabled": false,
    },
  },
  "nodenv": Object {
    "fileMatch": Array [
      "^.node-version$",
    ],
    "versioning": "node",
  },
  "npm": Object {
    "fileMatch": Array [
      "(^|/)package.json$",
    ],
    "prBodyDefinitions": Object {
      "Change": "[{{#if displayFrom}}\`{{{displayFrom}}}\` -> {{else}}{{#if currentValue}}\`{{{currentValue}}}\` -> {{/if}}{{/if}}{{#if displayTo}}\`{{{displayTo}}}\`{{else}}\`{{{newValue}}}\`{{/if}}](https://renovatebot.com/diffs/npm/{{replace '/' '%2f' depName}}/{{{fromVersion}}}/{{{toVersion}}})",
    },
    "rollbackPrs": true,
    "versioning": "npm",
  },
  "npmToken": null,
  "npmrc": null,
  "nuget": Object {
    "fileMatch": Array [
      "\\\\.(?:cs|fs|vb)proj$",
    ],
  },
  "nvm": Object {
    "fileMatch": Array [
      "(^|/)\\\\.nvmrc$",
    ],
    "versioning": "node",
  },
  "onboarding": true,
  "onboardingBranch": "renovate/configure",
  "onboardingConfig": Object {
    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
  },
  "onboardingPrTitle": "Configure Renovate",
  "optimizeForDisabled": false,
  "packageRules": Array [],
  "password": "pass",
  "patch": Object {},
  "persistRepoData": false,
  "php": Object {},
  "pin": Object {
    "commitMessageAction": "Pin",
    "group": Object {
      "commitMessageExtra": "",
      "commitMessageTopic": "dependencies",
    },
    "groupName": "Pin Dependencies",
    "groupSlug": "pin-dependencies",
    "rebaseWhen": "behind-base-branch",
    "recreateClosed": true,
    "unpublishSafe": false,
  },
  "pinDigests": false,
  "pip_requirements": Object {
    "fileMatch": Array [
      "(^|/)([\\\\w-]*)requirements.(txt|pip)$",
    ],
  },
  "pip_setup": Object {
    "fileMatch": Array [
      "(^|/)setup.py$",
    ],
  },
  "pipenv": Object {
    "fileMatch": Array [
      "(^|/)Pipfile$",
    ],
  },
  "platform": "bitbucket",
  "poetry": Object {
    "fileMatch": Array [
      "(^|/)pyproject\\\\.toml$",
    ],
  },
  "postUpdateOptions": Array [],
  "postUpgradeTasks": Object {
    "commands": Array [],
    "fileFilters": Array [],
  },
  "prBodyColumns": Array [
    "Package",
    "Type",
    "Update",
    "Change",
  ],
  "prBodyDefinitions": Object {
    "Change": "\`{{{displayFrom}}}\` -> \`{{{displayTo}}}\`",
    "Current value": "{{{currentValue}}}",
    "New value": "{{{newValue}}}",
    "Package": "{{{depNameLinked}}}",
    "Package file": "{{{packageFile}}}",
    "References": "{{{references}}}",
    "Type": "{{{depType}}}",
    "Update": "{{{updateType}}}",
  },
  "prBodyNotes": Array [],
  "prCommitsPerRunLimit": 0,
  "prConcurrentLimit": 0,
  "prCreation": "immediate",
  "prHourlyLimit": 0,
  "prNotPendingHours": 25,
  "prPriority": 0,
  "prTitle": null,
  "printConfig": false,
  "privateKey": null,
  "productLinks": Object {
    "documentation": "https://docs.renovatebot.com/",
    "help": "https://github.com/renovatebot/config-help/issues",
    "homepage": "https://github.com/renovatebot/renovate",
  },
  "pruneStaleBranches": true,
  "pub": Object {
    "fileMatch": Array [
      "(^|/)pubspec\\\\.ya?ml$",
    ],
    "versioning": "npm",
  },
  "python": Object {
    "versioning": "pep440",
  },
  "rangeStrategy": "replace",
  "rebaseLabel": "rebase",
  "rebaseWhen": "auto",
  "recreateClosed": false,
  "regex": Object {
    "pinDigests": false,
  },
  "regexManagers": Array [],
  "registryUrls": null,
  "repositories": Array [],
  "requireConfig": true,
  "requiredStatusChecks": Array [],
  "respectLatest": true,
  "reviewers": Array [],
  "reviewersSampleSize": null,
  "rollbackPrs": false,
  "ruby": Object {},
  "ruby-version": Object {
    "fileMatch": Array [
      "(^|/)\\\\.ruby-version$",
    ],
    "versioning": "ruby",
  },
  "rust": Object {},
  "sbt": Object {
    "fileMatch": Array [
      "\\\\.sbt$",
      "project/[^/]*.scala$",
    ],
    "versioning": "ivy",
  },
  "schedule": Array [
    "at any time",
  ],
  "semanticCommitScope": "deps",
  "semanticCommitType": "chore",
  "semanticCommits": null,
  "separateMajorMinor": true,
  "separateMinorPatch": false,
  "separateMultipleMajor": false,
  "skipInstalls": null,
  "stabilityDays": 0,
  "statusCheckVerify": false,
  "supportPolicy": Array [],
  "suppressNotifications": Array [
    "deprecationWarningIssues",
  ],
  "swift": Object {
    "fileMatch": Array [
      "(^|/)Package\\\\.swift",
    ],
    "rangeStrategy": "bump",
    "versioning": "swift",
  },
  "terraform": Object {
    "commitMessageTopic": "Terraform {{managerData.terraformDependencyType}} {{depNameShort}}",
    "fileMatch": Array [
      "\\\\.tf$",
    ],
    "versioning": "hashicorp",
  },
  "timezone": null,
  "token": null,
  "travis": Object {
    "fileMatch": Array [
      "^.travis.yml$",
    ],
    "versioning": "node",
  },
  "unicodeEmoji": false,
  "unpublishSafe": false,
  "updateLockFiles": true,
  "updateNotScheduled": true,
  "username": "user",
  "versioning": "semver",
  "vulnerabilityAlerts": Object {
    "commitMessageSuffix": "[SECURITY]",
    "groupName": null,
    "masterIssueApproval": false,
    "rangeStrategy": "update-lockfile",
    "schedule": Array [],
  },
  "yarnrc": null,
}
`;

exports[`config/index .parseConfigs(env, defaultArgv) supports forceCli 1`] = `
Object {
  "additionalReviewers": Array [],
  "aliases": Object {},
  "allowedPostUpgradeCommands": Array [],
  "ansible": Object {
    "fileMatch": Array [
      "(^|/)tasks/[^/]+\\\\.ya?ml$",
    ],
  },
  "ansible-galaxy": Object {
    "fileMatch": Array [
      "(^|/)requirements\\\\.ya?ml$",
    ],
  },
  "assignAutomerge": false,
  "assignees": Array [],
  "assigneesSampleSize": null,
  "autodiscover": false,
  "autodiscoverFilter": null,
  "automerge": false,
  "automergeComment": "automergeComment",
  "automergeType": "pr",
  "azureAutoComplete": false,
  "azureWorkItemId": 0,
  "baseBranches": Array [],
  "baseDir": null,
  "bazel": Object {
    "fileMatch": Array [
      "(^|/)WORKSPACE$",
      "\\\\.bzl$",
    ],
  },
  "bbUseDefaultReviewers": true,
  "binarySource": "auto",
  "branchName": "{{{branchPrefix}}}{{{managerBranchPrefix}}}{{{branchTopic}}}",
  "branchPrefix": "renovate/",
  "branchTopic": "{{{depNameSanitized}}}-{{{newMajor}}}{{#if isPatch}}.{{{newMinor}}}{{/if}}.x{{#if isLockfileUpdate}}-lockfile{{/if}}",
  "buildkite": Object {
    "commitMessageExtra": "to {{#if isMajor}}v{{{newMajor}}}{{else}}{{{newValue}}}{{/if}}",
    "commitMessageTopic": "buildkite plugin {{depName}}",
    "fileMatch": Array [
      "buildkite\\\\.ya?ml",
      "\\\\.buildkite/.+\\\\.ya?ml$",
    ],
    "managerBranchPrefix": "buildkite-",
  },
  "bumpVersion": null,
  "bundler": Object {
    "fileMatch": Array [
      "(^|/)Gemfile$",
    ],
    "versioning": "ruby",
  },
  "cacheDir": null,
  "cargo": Object {
    "commitMessageTopic": "Rust crate {{depName}}",
    "fileMatch": Array [
      "(^|/)Cargo.toml$",
    ],
    "managerBranchPrefix": "rust-",
    "rangeStrategy": "bump",
    "versioning": "cargo",
  },
  "cdnurl": Object {
    "fileMatch": Array [],
    "versioning": "semver",
  },
  "circleci": Object {
    "fileMatch": Array [
      "(^|/).circleci/config.yml$",
    ],
  },
  "cocoapods": Object {
    "fileMatch": Array [
      "(^|/)Podfile$",
    ],
    "versioning": "ruby",
  },
  "commitBody": null,
  "commitBodyTable": false,
  "commitMessage": "{{{commitMessagePrefix}}} {{{commitMessageAction}}} {{{commitMessageTopic}}} {{{commitMessageExtra}}} {{{commitMessageSuffix}}}",
  "commitMessageAction": "Update",
  "commitMessageExtra": "to {{#if isMajor}}v{{{newMajor}}}{{else}}{{#if isSingleVersion}}v{{{toVersion}}}{{else}}{{{newValue}}}{{/if}}{{/if}}",
  "commitMessagePrefix": null,
  "commitMessageSuffix": null,
  "commitMessageTopic": "dependency {{depName}}",
  "compatibility": Object {},
  "composer": Object {
    "fileMatch": Array [
      "(^|/)([\\\\w-]*)composer.json$",
    ],
    "versioning": "composer",
  },
  "composerIgnorePlatformReqs": true,
  "configWarningReuseIssue": true,
  "deps-edn": Object {
    "fileMatch": Array [
      "(^|/)deps\\\\.edn$",
    ],
    "versioning": "maven",
  },
  "description": Array [],
  "digest": Object {
    "branchTopic": "{{{depNameSanitized}}}-digest",
    "commitMessageExtra": "to {{newDigestShort}}",
    "commitMessageTopic": "{{{depName}}} commit hash",
  },
  "docker": Object {
    "versioning": "docker",
  },
  "docker-compose": Object {
    "fileMatch": Array [
      "(^|/)docker-compose[^/]*\\\\.ya?ml$",
    ],
  },
  "dockerMapDotfiles": false,
  "dockerUser": null,
  "dockerfile": Object {
    "fileMatch": Array [
      "(^|/|\\\\.)Dockerfile$",
      "(^|/)Dockerfile\\\\.[^/]*$",
    ],
  },
  "dotnet": Object {},
  "droneci": Object {
    "fileMatch": Array [
      "(^|/).drone.yml$",
    ],
  },
  "dryRun": false,
  "enabled": true,
  "enabledManagers": Array [],
  "encrypted": null,
  "endpoint": null,
  "excludeCommitPaths": Array [],
  "fileMatch": Array [],
  "followTag": null,
  "force": null,
  "forceCli": false,
  "forkMode": false,
  "git-submodules": Object {
    "enabled": false,
    "fileMatch": Array [
      "(^|/).gitmodules$",
    ],
    "versioning": "git",
  },
  "gitAuthor": null,
  "gitLabAutomerge": false,
  "gitPrivateKey": null,
  "github-actions": Object {
    "fileMatch": Array [
      "^\\\\.github/main.workflow$",
      "^\\\\.github/workflows/[^/]+\\\\.ya?ml$",
    ],
    "pinDigests": true,
  },
  "gitlabci": Object {
    "fileMatch": Array [
      "^\\\\.gitlab-ci\\\\.yml$",
    ],
  },
  "gitlabci-include": Object {
    "fileMatch": Array [
      "^\\\\.gitlab-ci\\\\.yml$",
    ],
  },
  "global": Object {
    "prBanner": undefined,
    "prFooter": "This PR has been generated by [Renovate Bot](https://github.com/renovatebot/renovate).",
  },
  "golang": Object {
    "commitMessageTopic": "module {{depNameShort}}",
  },
  "gomod": Object {
    "fileMatch": Array [
      "(^|/)go.mod$",
    ],
  },
  "gradle": Object {
    "fileMatch": Array [
      "\\\\.gradle(\\\\.kts)?$",
      "(^|/)gradle.properties$",
    ],
    "timeout": 600,
    "versioning": "gradle",
  },
  "gradle-wrapper": Object {
    "fileMatch": Array [
      "(^|/)gradle/wrapper/gradle-wrapper.properties$",
    ],
    "versioning": "gradle",
  },
  "group": Object {
    "branchTopic": "{{{groupSlug}}}",
    "commitMessageTopic": "{{{groupName}}}",
  },
  "groupName": null,
  "groupSlug": null,
  "helm-requirements": Object {
    "aliases": Object {
      "stable": "https://kubernetes-charts.storage.googleapis.com/",
    },
    "commitMessageTopic": "helm chart {{depName}}",
    "fileMatch": Array [
      "(^|/)requirements.yaml$",
    ],
  },
  "helm-values": Object {
    "commitMessageTopic": "helm values {{depName}}",
    "fileMatch": Array [
      "(^|/)values.yaml$",
    ],
  },
  "helmfile": Object {
    "aliases": Object {
      "stable": "https://kubernetes-charts.storage.googleapis.com/",
    },
    "commitMessageTopic": "helm chart {{depName}}",
    "fileMatch": Array [
      "(^|/)helmfile.yaml$",
    ],
  },
  "homebrew": Object {
    "commitMessageTopic": "Homebrew Formula {{depName}}",
    "fileMatch": Array [
      "^Formula/[^/]+[.]rb$",
    ],
    "managerBranchPrefix": "homebrew-",
  },
  "hostRules": Array [
    Object {
      "timeout": 60000,
    },
  ],
  "html": Object {
    "digest": Object {
      "enabled": false,
    },
    "fileMatch": Array [
      "\\\\.html?$",
    ],
    "pinDigests": false,
    "versioning": "semver",
  },
  "ignoreDeprecated": true,
  "ignoreDeps": Array [],
  "ignoreNpmrcFile": false,
  "ignorePaths": Array [
    "**/node_modules/**",
    "**/bower_components/**",
  ],
  "ignoreScripts": false,
  "ignoreUnstable": true,
  "includeForks": false,
  "includePaths": Array [],
  "java": Object {},
  "js": Object {},
  "kubernetes": Object {
    "fileMatch": Array [],
  },
  "kustomize": Object {
    "fileMatch": Array [
      "(^|/)kustomization\\\\.yaml",
    ],
  },
  "labels": Array [],
  "lazyGrouping": true,
  "leiningen": Object {
    "fileMatch": Array [
      "(^|/)project\\\\.clj$",
    ],
    "versioning": "maven",
  },
  "lockFileMaintenance": Object {
    "branchTopic": "lock-file-maintenance",
    "commitMessageAction": "Lock file maintenance",
    "commitMessageExtra": null,
    "commitMessageTopic": null,
    "enabled": false,
    "groupName": null,
    "prBodyDefinitions": Object {
      "Change": "All locks refreshed",
    },
    "rebaseStalePrs": true,
    "recreateClosed": true,
    "schedule": Array [
      "before 5am on monday",
    ],
  },
  "logContext": null,
  "logLevel": "info",
  "major": Object {},
  "managerBranchPrefix": "",
  "masterIssue": false,
  "masterIssueApproval": false,
  "masterIssueAutoclose": false,
  "masterIssueTitle": "Update Dependencies (Renovate Bot)",
  "maven": Object {
    "fileMatch": Array [
      "\\\\.pom\\\\.xml$",
      "(^|/)pom\\\\.xml$",
    ],
    "versioning": "maven",
  },
  "meteor": Object {
    "fileMatch": Array [
      "(^|/)package.js$",
    ],
  },
  "minor": Object {},
  "mix": Object {
    "fileMatch": Array [
      "(^|/)mix\\\\.exs$",
    ],
    "versioning": "hex",
  },
  "node": Object {
    "commitMessageTopic": "Node.js",
    "major": Object {
      "enabled": false,
    },
  },
  "nodenv": Object {
    "fileMatch": Array [
      "^.node-version$",
    ],
    "versioning": "node",
  },
  "npm": Object {
    "fileMatch": Array [
      "(^|/)package.json$",
    ],
    "prBodyDefinitions": Object {
      "Change": "[{{#if displayFrom}}\`{{{displayFrom}}}\` -> {{else}}{{#if currentValue}}\`{{{currentValue}}}\` -> {{/if}}{{/if}}{{#if displayTo}}\`{{{displayTo}}}\`{{else}}\`{{{newValue}}}\`{{/if}}](https://renovatebot.com/diffs/npm/{{replace '/' '%2f' depName}}/{{{fromVersion}}}/{{{toVersion}}})",
    },
    "rollbackPrs": true,
    "versioning": "npm",
  },
  "npmToken": null,
  "npmrc": null,
  "nuget": Object {
    "fileMatch": Array [
      "\\\\.(?:cs|fs|vb)proj$",
    ],
  },
  "nvm": Object {
    "fileMatch": Array [
      "(^|/)\\\\.nvmrc$",
    ],
    "versioning": "node",
  },
  "onboarding": true,
  "onboardingBranch": "renovate/configure",
  "onboardingConfig": Object {
    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
  },
  "onboardingPrTitle": "Configure Renovate",
  "optimizeForDisabled": false,
  "packageRules": Array [],
  "password": null,
  "patch": Object {},
  "persistRepoData": false,
  "php": Object {},
  "pin": Object {
    "commitMessageAction": "Pin",
    "group": Object {
      "commitMessageExtra": "",
      "commitMessageTopic": "dependencies",
    },
    "groupName": "Pin Dependencies",
    "groupSlug": "pin-dependencies",
    "rebaseWhen": "behind-base-branch",
    "recreateClosed": true,
    "unpublishSafe": false,
  },
  "pinDigests": false,
  "pip_requirements": Object {
    "fileMatch": Array [
      "(^|/)([\\\\w-]*)requirements.(txt|pip)$",
    ],
  },
  "pip_setup": Object {
    "fileMatch": Array [
      "(^|/)setup.py$",
    ],
  },
  "pipenv": Object {
    "fileMatch": Array [
      "(^|/)Pipfile$",
    ],
  },
  "platform": "github",
  "poetry": Object {
    "fileMatch": Array [
      "(^|/)pyproject\\\\.toml$",
    ],
  },
  "postUpdateOptions": Array [],
  "postUpgradeTasks": Object {
    "commands": Array [],
    "fileFilters": Array [],
  },
  "prBodyColumns": Array [
    "Package",
    "Type",
    "Update",
    "Change",
  ],
  "prBodyDefinitions": Object {
    "Change": "\`{{{displayFrom}}}\` -> \`{{{displayTo}}}\`",
    "Current value": "{{{currentValue}}}",
    "New value": "{{{newValue}}}",
    "Package": "{{{depNameLinked}}}",
    "Package file": "{{{packageFile}}}",
    "References": "{{{references}}}",
    "Type": "{{{depType}}}",
    "Update": "{{{updateType}}}",
  },
  "prBodyNotes": Array [],
  "prCommitsPerRunLimit": 0,
  "prConcurrentLimit": 0,
  "prCreation": "immediate",
  "prHourlyLimit": 0,
  "prNotPendingHours": 25,
  "prPriority": 0,
  "prTitle": null,
  "printConfig": false,
  "privateKey": null,
  "productLinks": Object {
    "documentation": "https://docs.renovatebot.com/",
    "help": "https://github.com/renovatebot/config-help/issues",
    "homepage": "https://github.com/renovatebot/renovate",
  },
  "pruneStaleBranches": true,
  "pub": Object {
    "fileMatch": Array [
      "(^|/)pubspec\\\\.ya?ml$",
    ],
    "versioning": "npm",
  },
  "python": Object {
    "versioning": "pep440",
  },
  "rangeStrategy": "replace",
  "rebaseLabel": "rebase",
  "rebaseWhen": "auto",
  "recreateClosed": false,
  "regex": Object {
    "pinDigests": false,
  },
  "regexManagers": Array [],
  "registryUrls": null,
  "repositories": Array [],
  "requireConfig": true,
  "requiredStatusChecks": Array [],
  "respectLatest": true,
  "reviewers": Array [],
  "reviewersSampleSize": null,
  "rollbackPrs": false,
  "ruby": Object {},
  "ruby-version": Object {
    "fileMatch": Array [
      "(^|/)\\\\.ruby-version$",
    ],
    "versioning": "ruby",
  },
  "rust": Object {},
  "sbt": Object {
    "fileMatch": Array [
      "\\\\.sbt$",
      "project/[^/]*.scala$",
    ],
    "versioning": "ivy",
  },
  "schedule": Array [
    "at any time",
  ],
  "semanticCommitScope": "deps",
  "semanticCommitType": "chore",
  "semanticCommits": null,
  "separateMajorMinor": true,
  "separateMinorPatch": false,
  "separateMultipleMajor": false,
  "skipInstalls": null,
  "stabilityDays": 0,
  "statusCheckVerify": false,
  "supportPolicy": Array [],
  "suppressNotifications": Array [
    "deprecationWarningIssues",
  ],
  "swift": Object {
    "fileMatch": Array [
      "(^|/)Package\\\\.swift",
    ],
    "rangeStrategy": "bump",
    "versioning": "swift",
  },
  "terraform": Object {
    "commitMessageTopic": "Terraform {{managerData.terraformDependencyType}} {{depNameShort}}",
    "fileMatch": Array [
      "\\\\.tf$",
    ],
    "versioning": "hashicorp",
  },
  "timezone": null,
  "token": "abc",
  "travis": Object {
    "fileMatch": Array [
      "^.travis.yml$",
    ],
    "versioning": "node",
  },
  "unicodeEmoji": false,
  "unpublishSafe": false,
  "updateLockFiles": true,
  "updateNotScheduled": true,
  "username": null,
  "versioning": "semver",
  "vulnerabilityAlerts": Object {
    "commitMessageSuffix": "[SECURITY]",
    "groupName": null,
    "masterIssueApproval": false,
    "rangeStrategy": "update-lockfile",
    "schedule": Array [],
  },
  "yarnrc": null,
}
`;

exports[`config/index .parseConfigs(env, defaultArgv) supports token in CLI options 1`] = `
Object {
  "additionalReviewers": Array [],
  "aliases": Object {},
  "allowedPostUpgradeCommands": Array [],
  "ansible": Object {
    "fileMatch": Array [
      "(^|/)tasks/[^/]+\\\\.ya?ml$",
    ],
  },
  "ansible-galaxy": Object {
    "fileMatch": Array [
      "(^|/)requirements\\\\.ya?ml$",
    ],
  },
  "assignAutomerge": false,
  "assignees": Array [],
  "assigneesSampleSize": null,
  "autodiscover": false,
  "autodiscoverFilter": null,
  "automerge": false,
  "automergeComment": "automergeComment",
  "automergeType": "pr",
  "azureAutoComplete": false,
  "azureWorkItemId": 0,
  "baseBranches": Array [],
  "baseDir": null,
  "bazel": Object {
    "fileMatch": Array [
      "(^|/)WORKSPACE$",
      "\\\\.bzl$",
    ],
  },
  "bbUseDefaultReviewers": true,
  "binarySource": "auto",
  "branchName": "{{{branchPrefix}}}{{{managerBranchPrefix}}}{{{branchTopic}}}",
  "branchPrefix": "renovate/",
  "branchTopic": "{{{depNameSanitized}}}-{{{newMajor}}}{{#if isPatch}}.{{{newMinor}}}{{/if}}.x{{#if isLockfileUpdate}}-lockfile{{/if}}",
  "buildkite": Object {
    "commitMessageExtra": "to {{#if isMajor}}v{{{newMajor}}}{{else}}{{{newValue}}}{{/if}}",
    "commitMessageTopic": "buildkite plugin {{depName}}",
    "fileMatch": Array [
      "buildkite\\\\.ya?ml",
      "\\\\.buildkite/.+\\\\.ya?ml$",
    ],
    "managerBranchPrefix": "buildkite-",
  },
  "bumpVersion": null,
  "bundler": Object {
    "fileMatch": Array [
      "(^|/)Gemfile$",
    ],
    "versioning": "ruby",
  },
  "cacheDir": null,
  "cargo": Object {
    "commitMessageTopic": "Rust crate {{depName}}",
    "fileMatch": Array [
      "(^|/)Cargo.toml$",
    ],
    "managerBranchPrefix": "rust-",
    "rangeStrategy": "bump",
    "versioning": "cargo",
  },
  "cdnurl": Object {
    "fileMatch": Array [],
    "versioning": "semver",
  },
  "circleci": Object {
    "fileMatch": Array [
      "(^|/).circleci/config.yml$",
    ],
  },
  "cocoapods": Object {
    "fileMatch": Array [
      "(^|/)Podfile$",
    ],
    "versioning": "ruby",
  },
  "commitBody": null,
  "commitBodyTable": false,
  "commitMessage": "{{{commitMessagePrefix}}} {{{commitMessageAction}}} {{{commitMessageTopic}}} {{{commitMessageExtra}}} {{{commitMessageSuffix}}}",
  "commitMessageAction": "Update",
  "commitMessageExtra": "to {{#if isMajor}}v{{{newMajor}}}{{else}}{{#if isSingleVersion}}v{{{toVersion}}}{{else}}{{{newValue}}}{{/if}}{{/if}}",
  "commitMessagePrefix": null,
  "commitMessageSuffix": null,
  "commitMessageTopic": "dependency {{depName}}",
  "compatibility": Object {},
  "composer": Object {
    "fileMatch": Array [
      "(^|/)([\\\\w-]*)composer.json$",
    ],
    "versioning": "composer",
  },
  "composerIgnorePlatformReqs": true,
  "configWarningReuseIssue": true,
  "customPrFooter": true,
  "deps-edn": Object {
    "fileMatch": Array [
      "(^|/)deps\\\\.edn$",
    ],
    "versioning": "maven",
  },
  "description": Array [],
  "digest": Object {
    "branchTopic": "{{{depNameSanitized}}}-digest",
    "commitMessageExtra": "to {{newDigestShort}}",
    "commitMessageTopic": "{{{depName}}} commit hash",
  },
  "docker": Object {
    "versioning": "docker",
  },
  "docker-compose": Object {
    "fileMatch": Array [
      "(^|/)docker-compose[^/]*\\\\.ya?ml$",
    ],
  },
  "dockerMapDotfiles": false,
  "dockerUser": null,
  "dockerfile": Object {
    "fileMatch": Array [
      "(^|/|\\\\.)Dockerfile$",
      "(^|/)Dockerfile\\\\.[^/]*$",
    ],
  },
  "dotnet": Object {},
  "droneci": Object {
    "fileMatch": Array [
      "(^|/).drone.yml$",
    ],
  },
  "dryRun": false,
  "enabled": true,
  "enabledManagers": Array [],
  "encrypted": null,
  "endpoint": null,
  "excludeCommitPaths": Array [],
  "fileMatch": Array [],
  "followTag": null,
  "force": Object {
    "logContext": "abc123",
    "prFooter": "custom",
    "token": "abc",
  },
  "forceCli": true,
  "forkMode": false,
  "git-submodules": Object {
    "enabled": false,
    "fileMatch": Array [
      "(^|/).gitmodules$",
    ],
    "versioning": "git",
  },
  "gitAuthor": null,
  "gitLabAutomerge": false,
  "gitPrivateKey": null,
  "github-actions": Object {
    "fileMatch": Array [
      "^\\\\.github/main.workflow$",
      "^\\\\.github/workflows/[^/]+\\\\.ya?ml$",
    ],
    "pinDigests": true,
  },
  "gitlabci": Object {
    "fileMatch": Array [
      "^\\\\.gitlab-ci\\\\.yml$",
    ],
  },
  "gitlabci-include": Object {
    "fileMatch": Array [
      "^\\\\.gitlab-ci\\\\.yml$",
    ],
  },
  "global": Object {
    "prBanner": undefined,
    "prFooter": "custom",
  },
  "golang": Object {
    "commitMessageTopic": "module {{depNameShort}}",
  },
  "gomod": Object {
    "fileMatch": Array [
      "(^|/)go.mod$",
    ],
  },
  "gradle": Object {
    "fileMatch": Array [
      "\\\\.gradle(\\\\.kts)?$",
      "(^|/)gradle.properties$",
    ],
    "timeout": 600,
    "versioning": "gradle",
  },
  "gradle-wrapper": Object {
    "fileMatch": Array [
      "(^|/)gradle/wrapper/gradle-wrapper.properties$",
    ],
    "versioning": "gradle",
  },
  "group": Object {
    "branchTopic": "{{{groupSlug}}}",
    "commitMessageTopic": "{{{groupName}}}",
  },
  "groupName": null,
  "groupSlug": null,
  "helm-requirements": Object {
    "aliases": Object {
      "stable": "https://kubernetes-charts.storage.googleapis.com/",
    },
    "commitMessageTopic": "helm chart {{depName}}",
    "fileMatch": Array [
      "(^|/)requirements.yaml$",
    ],
  },
  "helm-values": Object {
    "commitMessageTopic": "helm values {{depName}}",
    "fileMatch": Array [
      "(^|/)values.yaml$",
    ],
  },
  "helmfile": Object {
    "aliases": Object {
      "stable": "https://kubernetes-charts.storage.googleapis.com/",
    },
    "commitMessageTopic": "helm chart {{depName}}",
    "fileMatch": Array [
      "(^|/)helmfile.yaml$",
    ],
  },
  "homebrew": Object {
    "commitMessageTopic": "Homebrew Formula {{depName}}",
    "fileMatch": Array [
      "^Formula/[^/]+[.]rb$",
    ],
    "managerBranchPrefix": "homebrew-",
  },
  "hostRules": Array [
    Object {
      "timeout": 60000,
    },
  ],
  "html": Object {
    "digest": Object {
      "enabled": false,
    },
    "fileMatch": Array [
      "\\\\.html?$",
    ],
    "pinDigests": false,
    "versioning": "semver",
  },
  "ignoreDeprecated": true,
  "ignoreDeps": Array [],
  "ignoreNpmrcFile": false,
  "ignorePaths": Array [
    "**/node_modules/**",
    "**/bower_components/**",
  ],
  "ignoreScripts": false,
  "ignoreUnstable": true,
  "includeForks": false,
  "includePaths": Array [],
  "java": Object {},
  "js": Object {},
  "kubernetes": Object {
    "fileMatch": Array [],
  },
  "kustomize": Object {
    "fileMatch": Array [
      "(^|/)kustomization\\\\.yaml",
    ],
  },
  "labels": Array [],
  "lazyGrouping": true,
  "leiningen": Object {
    "fileMatch": Array [
      "(^|/)project\\\\.clj$",
    ],
    "versioning": "maven",
  },
  "lockFileMaintenance": Object {
    "branchTopic": "lock-file-maintenance",
    "commitMessageAction": "Lock file maintenance",
    "commitMessageExtra": null,
    "commitMessageTopic": null,
    "enabled": false,
    "groupName": null,
    "prBodyDefinitions": Object {
      "Change": "All locks refreshed",
    },
    "rebaseStalePrs": true,
    "recreateClosed": true,
    "schedule": Array [
      "before 5am on monday",
    ],
  },
  "logContext": "abc123",
  "logLevel": "info",
  "major": Object {},
  "managerBranchPrefix": "",
  "masterIssue": false,
  "masterIssueApproval": false,
  "masterIssueAutoclose": false,
  "masterIssueTitle": "Update Dependencies (Renovate Bot)",
  "maven": Object {
    "fileMatch": Array [
      "\\\\.pom\\\\.xml$",
      "(^|/)pom\\\\.xml$",
    ],
    "versioning": "maven",
  },
  "meteor": Object {
    "fileMatch": Array [
      "(^|/)package.js$",
    ],
  },
  "minor": Object {},
  "mix": Object {
    "fileMatch": Array [
      "(^|/)mix\\\\.exs$",
    ],
    "versioning": "hex",
  },
  "node": Object {
    "commitMessageTopic": "Node.js",
    "major": Object {
      "enabled": false,
    },
  },
  "nodenv": Object {
    "fileMatch": Array [
      "^.node-version$",
    ],
    "versioning": "node",
  },
  "npm": Object {
    "fileMatch": Array [
      "(^|/)package.json$",
    ],
    "prBodyDefinitions": Object {
      "Change": "[{{#if displayFrom}}\`{{{displayFrom}}}\` -> {{else}}{{#if currentValue}}\`{{{currentValue}}}\` -> {{/if}}{{/if}}{{#if displayTo}}\`{{{displayTo}}}\`{{else}}\`{{{newValue}}}\`{{/if}}](https://renovatebot.com/diffs/npm/{{replace '/' '%2f' depName}}/{{{fromVersion}}}/{{{toVersion}}})",
    },
    "rollbackPrs": true,
    "versioning": "npm",
  },
  "npmToken": null,
  "npmrc": null,
  "nuget": Object {
    "fileMatch": Array [
      "\\\\.(?:cs|fs|vb)proj$",
    ],
  },
  "nvm": Object {
    "fileMatch": Array [
      "(^|/)\\\\.nvmrc$",
    ],
    "versioning": "node",
  },
  "onboarding": true,
  "onboardingBranch": "renovate/configure",
  "onboardingConfig": Object {
    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
  },
  "onboardingPrTitle": "Configure Renovate",
  "optimizeForDisabled": false,
  "packageRules": Array [],
  "password": null,
  "patch": Object {},
  "persistRepoData": false,
  "php": Object {},
  "pin": Object {
    "commitMessageAction": "Pin",
    "group": Object {
      "commitMessageExtra": "",
      "commitMessageTopic": "dependencies",
    },
    "groupName": "Pin Dependencies",
    "groupSlug": "pin-dependencies",
    "rebaseWhen": "behind-base-branch",
    "recreateClosed": true,
    "unpublishSafe": false,
  },
  "pinDigests": false,
  "pip_requirements": Object {
    "fileMatch": Array [
      "(^|/)([\\\\w-]*)requirements.(txt|pip)$",
    ],
  },
  "pip_setup": Object {
    "fileMatch": Array [
      "(^|/)setup.py$",
    ],
  },
  "pipenv": Object {
    "fileMatch": Array [
      "(^|/)Pipfile$",
    ],
  },
  "platform": "github",
  "poetry": Object {
    "fileMatch": Array [
      "(^|/)pyproject\\\\.toml$",
    ],
  },
  "postUpdateOptions": Array [],
  "postUpgradeTasks": Object {
    "commands": Array [],
    "fileFilters": Array [],
  },
  "prBodyColumns": Array [
    "Package",
    "Type",
    "Update",
    "Change",
  ],
  "prBodyDefinitions": Object {
    "Change": "\`{{{displayFrom}}}\` -> \`{{{displayTo}}}\`",
    "Current value": "{{{currentValue}}}",
    "New value": "{{{newValue}}}",
    "Package": "{{{depNameLinked}}}",
    "Package file": "{{{packageFile}}}",
    "References": "{{{references}}}",
    "Type": "{{{depType}}}",
    "Update": "{{{updateType}}}",
  },
  "prBodyNotes": Array [],
  "prCommitsPerRunLimit": 0,
  "prConcurrentLimit": 0,
  "prCreation": "immediate",
  "prHourlyLimit": 0,
  "prNotPendingHours": 25,
  "prPriority": 0,
  "prTitle": null,
  "printConfig": false,
  "privateKey": null,
  "productLinks": Object {
    "documentation": "https://docs.renovatebot.com/",
    "help": "https://github.com/renovatebot/config-help/issues",
    "homepage": "https://github.com/renovatebot/renovate",
  },
  "pruneStaleBranches": true,
  "pub": Object {
    "fileMatch": Array [
      "(^|/)pubspec\\\\.ya?ml$",
    ],
    "versioning": "npm",
  },
  "python": Object {
    "versioning": "pep440",
  },
  "rangeStrategy": "replace",
  "rebaseLabel": "rebase",
  "rebaseWhen": "auto",
  "recreateClosed": false,
  "regex": Object {
    "pinDigests": false,
  },
  "regexManagers": Array [],
  "registryUrls": null,
  "repositories": Array [],
  "requireConfig": true,
  "requiredStatusChecks": Array [],
  "respectLatest": true,
  "reviewers": Array [],
  "reviewersSampleSize": null,
  "rollbackPrs": false,
  "ruby": Object {},
  "ruby-version": Object {
    "fileMatch": Array [
      "(^|/)\\\\.ruby-version$",
    ],
    "versioning": "ruby",
  },
  "rust": Object {},
  "sbt": Object {
    "fileMatch": Array [
      "\\\\.sbt$",
      "project/[^/]*.scala$",
    ],
    "versioning": "ivy",
  },
  "schedule": Array [
    "at any time",
  ],
  "semanticCommitScope": "deps",
  "semanticCommitType": "chore",
  "semanticCommits": null,
  "separateMajorMinor": true,
  "separateMinorPatch": false,
  "separateMultipleMajor": false,
  "skipInstalls": null,
  "stabilityDays": 0,
  "statusCheckVerify": false,
  "supportPolicy": Array [],
  "suppressNotifications": Array [
    "deprecationWarningIssues",
  ],
  "swift": Object {
    "fileMatch": Array [
      "(^|/)Package\\\\.swift",
    ],
    "rangeStrategy": "bump",
    "versioning": "swift",
  },
  "terraform": Object {
    "commitMessageTopic": "Terraform {{managerData.terraformDependencyType}} {{depNameShort}}",
    "fileMatch": Array [
      "\\\\.tf$",
    ],
    "versioning": "hashicorp",
  },
  "timezone": null,
  "token": "abc",
  "travis": Object {
    "fileMatch": Array [
      "^.travis.yml$",
    ],
    "versioning": "node",
  },
  "unicodeEmoji": false,
  "unpublishSafe": false,
  "updateLockFiles": true,
  "updateNotScheduled": true,
  "username": null,
  "versioning": "semver",
  "vulnerabilityAlerts": Object {
    "commitMessageSuffix": "[SECURITY]",
    "groupName": null,
    "masterIssueApproval": false,
    "rangeStrategy": "update-lockfile",
    "schedule": Array [],
  },
  "yarnrc": null,
}
`;

exports[`config/index .parseConfigs(env, defaultArgv) supports token in env 1`] = `
Object {
  "additionalReviewers": Array [],
  "aliases": Object {},
  "allowedPostUpgradeCommands": Array [],
  "ansible": Object {
    "fileMatch": Array [
      "(^|/)tasks/[^/]+\\\\.ya?ml$",
    ],
  },
  "ansible-galaxy": Object {
    "fileMatch": Array [
      "(^|/)requirements\\\\.ya?ml$",
    ],
  },
  "assignAutomerge": false,
  "assignees": Array [],
  "assigneesSampleSize": null,
  "autodiscover": false,
  "autodiscoverFilter": null,
  "automerge": false,
  "automergeComment": "automergeComment",
  "automergeType": "pr",
  "azureAutoComplete": false,
  "azureWorkItemId": 0,
  "baseBranches": Array [],
  "baseDir": null,
  "bazel": Object {
    "fileMatch": Array [
      "(^|/)WORKSPACE$",
      "\\\\.bzl$",
    ],
  },
  "bbUseDefaultReviewers": true,
  "binarySource": "auto",
  "branchName": "{{{branchPrefix}}}{{{managerBranchPrefix}}}{{{branchTopic}}}",
  "branchPrefix": "renovate/",
  "branchTopic": "{{{depNameSanitized}}}-{{{newMajor}}}{{#if isPatch}}.{{{newMinor}}}{{/if}}.x{{#if isLockfileUpdate}}-lockfile{{/if}}",
  "buildkite": Object {
    "commitMessageExtra": "to {{#if isMajor}}v{{{newMajor}}}{{else}}{{{newValue}}}{{/if}}",
    "commitMessageTopic": "buildkite plugin {{depName}}",
    "fileMatch": Array [
      "buildkite\\\\.ya?ml",
      "\\\\.buildkite/.+\\\\.ya?ml$",
    ],
    "managerBranchPrefix": "buildkite-",
  },
  "bumpVersion": null,
  "bundler": Object {
    "fileMatch": Array [
      "(^|/)Gemfile$",
    ],
    "versioning": "ruby",
  },
  "cacheDir": null,
  "cargo": Object {
    "commitMessageTopic": "Rust crate {{depName}}",
    "fileMatch": Array [
      "(^|/)Cargo.toml$",
    ],
    "managerBranchPrefix": "rust-",
    "rangeStrategy": "bump",
    "versioning": "cargo",
  },
  "cdnurl": Object {
    "fileMatch": Array [],
    "versioning": "semver",
  },
  "circleci": Object {
    "fileMatch": Array [
      "(^|/).circleci/config.yml$",
    ],
  },
  "cocoapods": Object {
    "fileMatch": Array [
      "(^|/)Podfile$",
    ],
    "versioning": "ruby",
  },
  "commitBody": null,
  "commitBodyTable": false,
  "commitMessage": "{{{commitMessagePrefix}}} {{{commitMessageAction}}} {{{commitMessageTopic}}} {{{commitMessageExtra}}} {{{commitMessageSuffix}}}",
  "commitMessageAction": "Update",
  "commitMessageExtra": "to {{#if isMajor}}v{{{newMajor}}}{{else}}{{#if isSingleVersion}}v{{{toVersion}}}{{else}}{{{newValue}}}{{/if}}{{/if}}",
  "commitMessagePrefix": null,
  "commitMessageSuffix": null,
  "commitMessageTopic": "dependency {{depName}}",
  "compatibility": Object {},
  "composer": Object {
    "fileMatch": Array [
      "(^|/)([\\\\w-]*)composer.json$",
    ],
    "versioning": "composer",
  },
  "composerIgnorePlatformReqs": true,
  "configWarningReuseIssue": true,
  "deps-edn": Object {
    "fileMatch": Array [
      "(^|/)deps\\\\.edn$",
    ],
    "versioning": "maven",
  },
  "description": Array [],
  "digest": Object {
    "branchTopic": "{{{depNameSanitized}}}-digest",
    "commitMessageExtra": "to {{newDigestShort}}",
    "commitMessageTopic": "{{{depName}}} commit hash",
  },
  "docker": Object {
    "versioning": "docker",
  },
  "docker-compose": Object {
    "fileMatch": Array [
      "(^|/)docker-compose[^/]*\\\\.ya?ml$",
    ],
  },
  "dockerMapDotfiles": false,
  "dockerUser": null,
  "dockerfile": Object {
    "fileMatch": Array [
      "(^|/|\\\\.)Dockerfile$",
      "(^|/)Dockerfile\\\\.[^/]*$",
    ],
  },
  "dotnet": Object {},
  "droneci": Object {
    "fileMatch": Array [
      "(^|/).drone.yml$",
    ],
  },
  "dryRun": false,
  "enabled": true,
  "enabledManagers": Array [],
  "encrypted": null,
  "endpoint": null,
  "excludeCommitPaths": Array [],
  "fileMatch": Array [],
  "followTag": null,
  "force": Object {},
  "forceCli": true,
  "forkMode": false,
  "git-submodules": Object {
    "enabled": false,
    "fileMatch": Array [
      "(^|/).gitmodules$",
    ],
    "versioning": "git",
  },
  "gitAuthor": null,
  "gitLabAutomerge": false,
  "gitPrivateKey": null,
  "github-actions": Object {
    "fileMatch": Array [
      "^\\\\.github/main.workflow$",
      "^\\\\.github/workflows/[^/]+\\\\.ya?ml$",
    ],
    "pinDigests": true,
  },
  "gitlabci": Object {
    "fileMatch": Array [
      "^\\\\.gitlab-ci\\\\.yml$",
    ],
  },
  "gitlabci-include": Object {
    "fileMatch": Array [
      "^\\\\.gitlab-ci\\\\.yml$",
    ],
  },
  "global": Object {
    "prBanner": undefined,
    "prFooter": "This PR has been generated by [Renovate Bot](https://github.com/renovatebot/renovate).",
  },
  "golang": Object {
    "commitMessageTopic": "module {{depNameShort}}",
  },
  "gomod": Object {
    "fileMatch": Array [
      "(^|/)go.mod$",
    ],
  },
  "gradle": Object {
    "fileMatch": Array [
      "\\\\.gradle(\\\\.kts)?$",
      "(^|/)gradle.properties$",
    ],
    "timeout": 600,
    "versioning": "gradle",
  },
  "gradle-wrapper": Object {
    "fileMatch": Array [
      "(^|/)gradle/wrapper/gradle-wrapper.properties$",
    ],
    "versioning": "gradle",
  },
  "group": Object {
    "branchTopic": "{{{groupSlug}}}",
    "commitMessageTopic": "{{{groupName}}}",
  },
  "groupName": null,
  "groupSlug": null,
  "helm-requirements": Object {
    "aliases": Object {
      "stable": "https://kubernetes-charts.storage.googleapis.com/",
    },
    "commitMessageTopic": "helm chart {{depName}}",
    "fileMatch": Array [
      "(^|/)requirements.yaml$",
    ],
  },
  "helm-values": Object {
    "commitMessageTopic": "helm values {{depName}}",
    "fileMatch": Array [
      "(^|/)values.yaml$",
    ],
  },
  "helmfile": Object {
    "aliases": Object {
      "stable": "https://kubernetes-charts.storage.googleapis.com/",
    },
    "commitMessageTopic": "helm chart {{depName}}",
    "fileMatch": Array [
      "(^|/)helmfile.yaml$",
    ],
  },
  "homebrew": Object {
    "commitMessageTopic": "Homebrew Formula {{depName}}",
    "fileMatch": Array [
      "^Formula/[^/]+[.]rb$",
    ],
    "managerBranchPrefix": "homebrew-",
  },
  "hostRules": Array [
    Object {
      "timeout": 60000,
    },
  ],
  "html": Object {
    "digest": Object {
      "enabled": false,
    },
    "fileMatch": Array [
      "\\\\.html?$",
    ],
    "pinDigests": false,
    "versioning": "semver",
  },
  "ignoreDeprecated": true,
  "ignoreDeps": Array [],
  "ignoreNpmrcFile": false,
  "ignorePaths": Array [
    "**/node_modules/**",
    "**/bower_components/**",
  ],
  "ignoreScripts": false,
  "ignoreUnstable": true,
  "includeForks": false,
  "includePaths": Array [],
  "java": Object {},
  "js": Object {},
  "kubernetes": Object {
    "fileMatch": Array [],
  },
  "kustomize": Object {
    "fileMatch": Array [
      "(^|/)kustomization\\\\.yaml",
    ],
  },
  "labels": Array [],
  "lazyGrouping": true,
  "leiningen": Object {
    "fileMatch": Array [
      "(^|/)project\\\\.clj$",
    ],
    "versioning": "maven",
  },
  "lockFileMaintenance": Object {
    "branchTopic": "lock-file-maintenance",
    "commitMessageAction": "Lock file maintenance",
    "commitMessageExtra": null,
    "commitMessageTopic": null,
    "enabled": false,
    "groupName": null,
    "prBodyDefinitions": Object {
      "Change": "All locks refreshed",
    },
    "rebaseStalePrs": true,
    "recreateClosed": true,
    "schedule": Array [
      "before 5am on monday",
    ],
  },
  "logContext": null,
  "logLevel": "info",
  "major": Object {},
  "managerBranchPrefix": "",
  "masterIssue": false,
  "masterIssueApproval": false,
  "masterIssueAutoclose": false,
  "masterIssueTitle": "Update Dependencies (Renovate Bot)",
  "maven": Object {
    "fileMatch": Array [
      "\\\\.pom\\\\.xml$",
      "(^|/)pom\\\\.xml$",
    ],
    "versioning": "maven",
  },
  "meteor": Object {
    "fileMatch": Array [
      "(^|/)package.js$",
    ],
  },
  "minor": Object {},
  "mix": Object {
    "fileMatch": Array [
      "(^|/)mix\\\\.exs$",
    ],
    "versioning": "hex",
  },
  "node": Object {
    "commitMessageTopic": "Node.js",
    "major": Object {
      "enabled": false,
    },
  },
  "nodenv": Object {
    "fileMatch": Array [
      "^.node-version$",
    ],
    "versioning": "node",
  },
  "npm": Object {
    "fileMatch": Array [
      "(^|/)package.json$",
    ],
    "prBodyDefinitions": Object {
      "Change": "[{{#if displayFrom}}\`{{{displayFrom}}}\` -> {{else}}{{#if currentValue}}\`{{{currentValue}}}\` -> {{/if}}{{/if}}{{#if displayTo}}\`{{{displayTo}}}\`{{else}}\`{{{newValue}}}\`{{/if}}](https://renovatebot.com/diffs/npm/{{replace '/' '%2f' depName}}/{{{fromVersion}}}/{{{toVersion}}})",
    },
    "rollbackPrs": true,
    "versioning": "npm",
  },
  "npmToken": null,
  "npmrc": null,
  "nuget": Object {
    "fileMatch": Array [
      "\\\\.(?:cs|fs|vb)proj$",
    ],
  },
  "nvm": Object {
    "fileMatch": Array [
      "(^|/)\\\\.nvmrc$",
    ],
    "versioning": "node",
  },
  "onboarding": true,
  "onboardingBranch": "renovate/configure",
  "onboardingConfig": Object {
    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
  },
  "onboardingPrTitle": "Configure Renovate",
  "optimizeForDisabled": false,
  "packageRules": Array [],
  "password": null,
  "patch": Object {},
  "persistRepoData": false,
  "php": Object {},
  "pin": Object {
    "commitMessageAction": "Pin",
    "group": Object {
      "commitMessageExtra": "",
      "commitMessageTopic": "dependencies",
    },
    "groupName": "Pin Dependencies",
    "groupSlug": "pin-dependencies",
    "rebaseWhen": "behind-base-branch",
    "recreateClosed": true,
    "unpublishSafe": false,
  },
  "pinDigests": false,
  "pip_requirements": Object {
    "fileMatch": Array [
      "(^|/)([\\\\w-]*)requirements.(txt|pip)$",
    ],
  },
  "pip_setup": Object {
    "fileMatch": Array [
      "(^|/)setup.py$",
    ],
  },
  "pipenv": Object {
    "fileMatch": Array [
      "(^|/)Pipfile$",
    ],
  },
  "platform": "github",
  "poetry": Object {
    "fileMatch": Array [
      "(^|/)pyproject\\\\.toml$",
    ],
  },
  "postUpdateOptions": Array [],
  "postUpgradeTasks": Object {
    "commands": Array [],
    "fileFilters": Array [],
  },
  "prBodyColumns": Array [
    "Package",
    "Type",
    "Update",
    "Change",
  ],
  "prBodyDefinitions": Object {
    "Change": "\`{{{displayFrom}}}\` -> \`{{{displayTo}}}\`",
    "Current value": "{{{currentValue}}}",
    "New value": "{{{newValue}}}",
    "Package": "{{{depNameLinked}}}",
    "Package file": "{{{packageFile}}}",
    "References": "{{{references}}}",
    "Type": "{{{depType}}}",
    "Update": "{{{updateType}}}",
  },
  "prBodyNotes": Array [],
  "prCommitsPerRunLimit": 0,
  "prConcurrentLimit": 0,
  "prCreation": "immediate",
  "prHourlyLimit": 0,
  "prNotPendingHours": 25,
  "prPriority": 0,
  "prTitle": null,
  "printConfig": false,
  "privateKey": null,
  "productLinks": Object {
    "documentation": "https://docs.renovatebot.com/",
    "help": "https://github.com/renovatebot/config-help/issues",
    "homepage": "https://github.com/renovatebot/renovate",
  },
  "pruneStaleBranches": true,
  "pub": Object {
    "fileMatch": Array [
      "(^|/)pubspec\\\\.ya?ml$",
    ],
    "versioning": "npm",
  },
  "python": Object {
    "versioning": "pep440",
  },
  "rangeStrategy": "replace",
  "rebaseLabel": "rebase",
  "rebaseWhen": "auto",
  "recreateClosed": false,
  "regex": Object {
    "pinDigests": false,
  },
  "regexManagers": Array [],
  "registryUrls": null,
  "repositories": Array [],
  "requireConfig": true,
  "requiredStatusChecks": Array [],
  "respectLatest": true,
  "reviewers": Array [],
  "reviewersSampleSize": null,
  "rollbackPrs": false,
  "ruby": Object {},
  "ruby-version": Object {
    "fileMatch": Array [
      "(^|/)\\\\.ruby-version$",
    ],
    "versioning": "ruby",
  },
  "rust": Object {},
  "sbt": Object {
    "fileMatch": Array [
      "\\\\.sbt$",
      "project/[^/]*.scala$",
    ],
    "versioning": "ivy",
  },
  "schedule": Array [
    "at any time",
  ],
  "semanticCommitScope": "deps",
  "semanticCommitType": "chore",
  "semanticCommits": null,
  "separateMajorMinor": true,
  "separateMinorPatch": false,
  "separateMultipleMajor": false,
  "skipInstalls": null,
  "stabilityDays": 0,
  "statusCheckVerify": false,
  "supportPolicy": Array [],
  "suppressNotifications": Array [
    "deprecationWarningIssues",
  ],
  "swift": Object {
    "fileMatch": Array [
      "(^|/)Package\\\\.swift",
    ],
    "rangeStrategy": "bump",
    "versioning": "swift",
  },
  "terraform": Object {
    "commitMessageTopic": "Terraform {{managerData.terraformDependencyType}} {{depNameShort}}",
    "fileMatch": Array [
      "\\\\.tf$",
    ],
    "versioning": "hashicorp",
  },
  "timezone": null,
  "token": "abc",
  "travis": Object {
    "fileMatch": Array [
      "^.travis.yml$",
    ],
    "versioning": "node",
  },
  "unicodeEmoji": false,
  "unpublishSafe": false,
  "updateLockFiles": true,
  "updateNotScheduled": true,
  "username": null,
  "versioning": "semver",
  "vulnerabilityAlerts": Object {
    "commitMessageSuffix": "[SECURITY]",
    "groupName": null,
    "masterIssueApproval": false,
    "rangeStrategy": "update-lockfile",
    "schedule": Array [],
  },
  "yarnrc": null,
}
`;

exports[`config/index mergeChildConfig(parentConfig, childConfig) filterConfig() 1`] = `
Object {
  "additionalReviewers": Array [],
  "aliases": Object {},
  "allowedPostUpgradeCommands": Array [],
  "assignAutomerge": false,
  "assignees": Array [],
  "assigneesSampleSize": null,
  "automerge": false,
  "automergeComment": "automergeComment",
  "automergeType": "pr",
  "azureAutoComplete": false,
  "azureWorkItemId": 0,
  "baseDir": null,
  "bbUseDefaultReviewers": true,
  "binarySource": "auto",
  "branchName": "{{{branchPrefix}}}{{{managerBranchPrefix}}}{{{branchTopic}}}",
  "branchTopic": "{{{depNameSanitized}}}-{{{newMajor}}}{{#if isPatch}}.{{{newMinor}}}{{/if}}.x{{#if isLockfileUpdate}}-lockfile{{/if}}",
  "bumpVersion": null,
  "cacheDir": null,
  "commitBody": null,
  "commitBodyTable": false,
  "commitMessage": "{{{commitMessagePrefix}}} {{{commitMessageAction}}} {{{commitMessageTopic}}} {{{commitMessageExtra}}} {{{commitMessageSuffix}}}",
  "commitMessageAction": "Update",
  "commitMessageExtra": "to {{#if isMajor}}v{{{newMajor}}}{{else}}{{#if isSingleVersion}}v{{{toVersion}}}{{else}}{{{newValue}}}{{/if}}{{/if}}",
  "commitMessagePrefix": null,
  "commitMessageSuffix": null,
  "commitMessageTopic": "dependency {{depName}}",
  "compatibility": Object {},
  "composerIgnorePlatformReqs": true,
  "configWarningReuseIssue": true,
  "dockerMapDotfiles": false,
  "dockerUser": null,
  "dryRun": false,
  "endpoint": null,
  "excludeCommitPaths": Array [],
  "gitAuthor": null,
  "gitLabAutomerge": false,
  "gitPrivateKey": null,
  "group": Object {
    "branchTopic": "{{{groupSlug}}}",
    "commitMessageTopic": "{{{groupName}}}",
  },
  "groupName": null,
  "groupSlug": null,
  "ignoreNpmrcFile": false,
  "ignoreScripts": false,
  "labels": Array [],
  "lazyGrouping": true,
  "managerBranchPrefix": "",
  "masterIssue": false,
  "masterIssueApproval": false,
  "masterIssueAutoclose": false,
  "masterIssueTitle": "Update Dependencies (Renovate Bot)",
  "onboardingBranch": "renovate/configure",
  "onboardingPrTitle": "Configure Renovate",
  "persistRepoData": false,
  "pinDigests": false,
  "platform": "github",
  "postUpdateOptions": Array [],
  "postUpgradeTasks": Object {
    "commands": Array [],
    "fileFilters": Array [],
  },
  "prBodyColumns": Array [
    "Package",
    "Type",
    "Update",
    "Change",
  ],
  "prBodyDefinitions": Object {
    "Change": "\`{{{displayFrom}}}\` -> \`{{{displayTo}}}\`",
    "Current value": "{{{currentValue}}}",
    "New value": "{{{newValue}}}",
    "Package": "{{{depNameLinked}}}",
    "Package file": "{{{packageFile}}}",
    "References": "{{{references}}}",
    "Type": "{{{depType}}}",
    "Update": "{{{updateType}}}",
  },
  "prBodyNotes": Array [],
  "prConcurrentLimit": 0,
  "prCreation": "immediate",
  "prHourlyLimit": 0,
  "prNotPendingHours": 25,
  "prPriority": 0,
  "prTitle": null,
  "printConfig": false,
  "productLinks": Object {
    "documentation": "https://docs.renovatebot.com/",
    "help": "https://github.com/renovatebot/config-help/issues",
    "homepage": "https://github.com/renovatebot/renovate",
  },
  "pruneStaleBranches": true,
  "rangeStrategy": "replace",
  "rebaseLabel": "rebase",
  "rebaseWhen": "auto",
  "recreateClosed": false,
  "requiredStatusChecks": Array [],
  "reviewers": Array [],
  "reviewersSampleSize": null,
  "rollbackPrs": false,
  "schedule": Array [
    "at any time",
  ],
  "semanticCommitScope": "deps",
  "semanticCommitType": "chore",
  "semanticCommits": null,
  "separateMajorMinor": true,
  "separateMinorPatch": false,
  "skipInstalls": null,
  "stabilityDays": 0,
  "statusCheckVerify": false,
  "suppressNotifications": Array [
    "deprecationWarningIssues",
  ],
  "timezone": null,
  "unicodeEmoji": false,
  "unpublishSafe": false,
  "updateLockFiles": true,
  "versioning": "semver",
  "vulnerabilityAlerts": Object {
    "commitMessageSuffix": "[SECURITY]",
    "groupName": null,
    "masterIssueApproval": false,
    "rangeStrategy": "update-lockfile",
    "schedule": Array [],
  },
}
`;

exports[`config/index mergeChildConfig(parentConfig, childConfig) getManagerConfig() 1`] = `
Object {
  "additionalReviewers": Array [],
  "aliases": Object {},
  "allowedPostUpgradeCommands": Array [],
  "assignAutomerge": false,
  "assignees": Array [],
  "assigneesSampleSize": null,
  "autodiscover": false,
  "autodiscoverFilter": null,
  "automerge": false,
  "automergeComment": "automergeComment",
  "automergeType": "pr",
  "azureAutoComplete": false,
  "azureWorkItemId": 0,
  "baseBranches": Array [],
  "baseDir": null,
  "bbUseDefaultReviewers": true,
  "binarySource": "auto",
  "branchName": "{{{branchPrefix}}}{{{managerBranchPrefix}}}{{{branchTopic}}}",
  "branchPrefix": "renovate/",
  "branchTopic": "{{{depNameSanitized}}}-{{{newMajor}}}{{#if isPatch}}.{{{newMinor}}}{{/if}}.x{{#if isLockfileUpdate}}-lockfile{{/if}}",
  "bumpVersion": null,
  "cacheDir": null,
  "commitBody": null,
  "commitBodyTable": false,
  "commitMessage": "{{{commitMessagePrefix}}} {{{commitMessageAction}}} {{{commitMessageTopic}}} {{{commitMessageExtra}}} {{{commitMessageSuffix}}}",
  "commitMessageAction": "Update",
  "commitMessageExtra": "to {{#if isMajor}}v{{{newMajor}}}{{else}}{{#if isSingleVersion}}v{{{toVersion}}}{{else}}{{{newValue}}}{{/if}}{{/if}}",
  "commitMessagePrefix": null,
  "commitMessageSuffix": null,
  "commitMessageTopic": "dependency {{depName}}",
  "compatibility": Object {},
  "composerIgnorePlatformReqs": true,
  "configWarningReuseIssue": true,
  "description": Array [],
  "digest": Object {
    "branchTopic": "{{{depNameSanitized}}}-digest",
    "commitMessageExtra": "to {{newDigestShort}}",
    "commitMessageTopic": "{{{depName}}} commit hash",
  },
  "dockerMapDotfiles": false,
  "dockerUser": null,
  "dryRun": false,
  "enabled": true,
  "enabledManagers": Array [],
  "encrypted": null,
  "endpoint": null,
  "excludeCommitPaths": Array [],
  "extends": Array [],
  "fileMatch": Array [
    "(^|/)package.json$",
  ],
  "followTag": null,
  "force": null,
  "forceCli": true,
  "forkMode": false,
  "gitAuthor": null,
  "gitLabAutomerge": false,
  "gitPrivateKey": null,
  "group": Object {
    "branchTopic": "{{{groupSlug}}}",
    "commitMessageTopic": "{{{groupName}}}",
  },
  "groupName": null,
  "groupSlug": null,
  "hostRules": Array [
    Object {
      "timeout": 60000,
    },
  ],
  "ignoreDeprecated": true,
  "ignoreDeps": Array [],
  "ignoreNpmrcFile": false,
  "ignorePaths": Array [
    "**/node_modules/**",
    "**/bower_components/**",
  ],
  "ignorePresets": Array [],
  "ignoreScripts": false,
  "ignoreUnstable": true,
  "includeForks": false,
  "includePaths": Array [],
  "java": Object {},
  "labels": Array [],
  "language": "js",
  "lazyGrouping": true,
  "lockFileMaintenance": Object {
    "branchTopic": "lock-file-maintenance",
    "commitMessageAction": "Lock file maintenance",
    "commitMessageExtra": null,
    "commitMessageTopic": null,
    "enabled": false,
    "groupName": null,
    "prBodyDefinitions": Object {
      "Change": "All locks refreshed",
    },
    "rebaseStalePrs": true,
    "recreateClosed": true,
    "schedule": Array [
      "before 5am on monday",
    ],
  },
  "logContext": null,
  "logFile": null,
  "logFileLevel": "debug",
  "logLevel": "info",
  "major": Object {},
  "manager": "npm",
  "managerBranchPrefix": "",
  "masterIssue": false,
  "masterIssueApproval": false,
  "masterIssueAutoclose": false,
  "masterIssueTitle": "Update Dependencies (Renovate Bot)",
  "minor": Object {},
  "npmToken": null,
  "npmrc": null,
  "onboarding": true,
  "onboardingBranch": "renovate/configure",
  "onboardingConfig": Object {
    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
  },
  "onboardingPrTitle": "Configure Renovate",
  "optimizeForDisabled": false,
  "packageRules": Array [],
  "password": null,
  "patch": Object {},
  "persistRepoData": false,
  "pin": Object {
    "commitMessageAction": "Pin",
    "group": Object {
      "commitMessageExtra": "",
      "commitMessageTopic": "dependencies",
    },
    "groupName": "Pin Dependencies",
    "groupSlug": "pin-dependencies",
    "rebaseWhen": "behind-base-branch",
    "recreateClosed": true,
    "unpublishSafe": false,
  },
  "pinDigests": false,
  "platform": "github",
  "postUpdateOptions": Array [],
  "postUpgradeTasks": Object {
    "commands": Array [],
    "fileFilters": Array [],
  },
  "prBodyColumns": Array [
    "Package",
    "Type",
    "Update",
    "Change",
  ],
  "prBodyDefinitions": Object {
    "Change": "[{{#if displayFrom}}\`{{{displayFrom}}}\` -> {{else}}{{#if currentValue}}\`{{{currentValue}}}\` -> {{/if}}{{/if}}{{#if displayTo}}\`{{{displayTo}}}\`{{else}}\`{{{newValue}}}\`{{/if}}](https://renovatebot.com/diffs/npm/{{replace '/' '%2f' depName}}/{{{fromVersion}}}/{{{toVersion}}})",
    "Current value": "{{{currentValue}}}",
    "New value": "{{{newValue}}}",
    "Package": "{{{depNameLinked}}}",
    "Package file": "{{{packageFile}}}",
    "References": "{{{references}}}",
    "Type": "{{{depType}}}",
    "Update": "{{{updateType}}}",
  },
  "prBodyNotes": Array [],
  "prCommitsPerRunLimit": 0,
  "prConcurrentLimit": 0,
  "prCreation": "immediate",
  "prFooter": "This PR has been generated by [Renovate Bot](https://github.com/renovatebot/renovate).",
  "prHourlyLimit": 0,
  "prNotPendingHours": 25,
  "prPriority": 0,
  "prTitle": null,
  "printConfig": false,
  "privateKey": null,
  "productLinks": Object {
    "documentation": "https://docs.renovatebot.com/",
    "help": "https://github.com/renovatebot/config-help/issues",
    "homepage": "https://github.com/renovatebot/renovate",
  },
  "pruneStaleBranches": true,
  "rangeStrategy": "replace",
  "rebaseLabel": "rebase",
  "rebaseWhen": "auto",
  "recreateClosed": false,
  "regexManagers": Array [],
  "registryUrls": null,
  "repositories": Array [],
  "requireConfig": true,
  "requiredStatusChecks": Array [],
  "respectLatest": true,
  "reviewers": Array [],
  "reviewersSampleSize": null,
  "rollbackPrs": true,
  "schedule": Array [
    "at any time",
  ],
  "semanticCommitScope": "deps",
  "semanticCommitType": "chore",
  "semanticCommits": null,
  "separateMajorMinor": true,
  "separateMinorPatch": false,
  "separateMultipleMajor": false,
  "skipInstalls": null,
  "stabilityDays": 0,
  "statusCheckVerify": false,
  "supportPolicy": Array [],
  "suppressNotifications": Array [
    "deprecationWarningIssues",
  ],
  "timezone": null,
  "token": null,
  "trustLevel": "low",
  "unicodeEmoji": false,
  "unpublishSafe": false,
  "updateLockFiles": true,
  "updateNotScheduled": true,
  "username": null,
  "versioning": "npm",
  "vulnerabilityAlerts": Object {
    "commitMessageSuffix": "[SECURITY]",
    "groupName": null,
    "masterIssueApproval": false,
    "rangeStrategy": "update-lockfile",
    "schedule": Array [],
  },
  "yarnrc": null,
}
`;

exports[`config/index mergeChildConfig(parentConfig, childConfig) getManagerConfig() 2`] = `
Object {
  "additionalReviewers": Array [],
  "aliases": Object {},
  "allowedPostUpgradeCommands": Array [],
  "assignAutomerge": false,
  "assignees": Array [],
  "assigneesSampleSize": null,
  "autodiscover": false,
  "autodiscoverFilter": null,
  "automerge": false,
  "automergeComment": "automergeComment",
  "automergeType": "pr",
  "azureAutoComplete": false,
  "azureWorkItemId": 0,
  "baseBranches": Array [],
  "baseDir": null,
  "bbUseDefaultReviewers": true,
  "binarySource": "auto",
  "branchName": "{{{branchPrefix}}}{{{managerBranchPrefix}}}{{{branchTopic}}}",
  "branchPrefix": "renovate/",
  "branchTopic": "{{{depNameSanitized}}}-{{{newMajor}}}{{#if isPatch}}.{{{newMinor}}}{{/if}}.x{{#if isLockfileUpdate}}-lockfile{{/if}}",
  "bumpVersion": null,
  "cacheDir": null,
  "commitBody": null,
  "commitBodyTable": false,
  "commitMessage": "{{{commitMessagePrefix}}} {{{commitMessageAction}}} {{{commitMessageTopic}}} {{{commitMessageExtra}}} {{{commitMessageSuffix}}}",
  "commitMessageAction": "Update",
  "commitMessageExtra": "to {{#if isMajor}}v{{{newMajor}}}{{else}}{{#if isSingleVersion}}v{{{toVersion}}}{{else}}{{{newValue}}}{{/if}}{{/if}}",
  "commitMessagePrefix": null,
  "commitMessageSuffix": null,
  "commitMessageTopic": "dependency {{depName}}",
  "compatibility": Object {},
  "composerIgnorePlatformReqs": true,
  "configWarningReuseIssue": true,
  "description": Array [],
  "digest": Object {
    "branchTopic": "{{{depNameSanitized}}}-digest",
    "commitMessageExtra": "to {{newDigestShort}}",
    "commitMessageTopic": "{{{depName}}} commit hash",
    "enabled": false,
  },
  "dockerMapDotfiles": false,
  "dockerUser": null,
  "dryRun": false,
  "enabled": true,
  "enabledManagers": Array [],
  "encrypted": null,
  "endpoint": null,
  "excludeCommitPaths": Array [],
  "extends": Array [],
  "fileMatch": Array [
    "\\\\.html?$",
  ],
  "followTag": null,
  "force": null,
  "forceCli": true,
  "forkMode": false,
  "gitAuthor": null,
  "gitLabAutomerge": false,
  "gitPrivateKey": null,
  "group": Object {
    "branchTopic": "{{{groupSlug}}}",
    "commitMessageTopic": "{{{groupName}}}",
  },
  "groupName": null,
  "groupSlug": null,
  "hostRules": Array [
    Object {
      "timeout": 60000,
    },
  ],
  "ignoreDeprecated": true,
  "ignoreDeps": Array [],
  "ignoreNpmrcFile": false,
  "ignorePaths": Array [
    "**/node_modules/**",
    "**/bower_components/**",
  ],
  "ignorePresets": Array [],
  "ignoreScripts": false,
  "ignoreUnstable": true,
  "includeForks": false,
  "includePaths": Array [],
  "java": Object {},
  "labels": Array [],
  "language": undefined,
  "lazyGrouping": true,
  "lockFileMaintenance": Object {
    "branchTopic": "lock-file-maintenance",
    "commitMessageAction": "Lock file maintenance",
    "commitMessageExtra": null,
    "commitMessageTopic": null,
    "enabled": false,
    "groupName": null,
    "prBodyDefinitions": Object {
      "Change": "All locks refreshed",
    },
    "rebaseStalePrs": true,
    "recreateClosed": true,
    "schedule": Array [
      "before 5am on monday",
    ],
  },
  "logContext": null,
  "logFile": null,
  "logFileLevel": "debug",
  "logLevel": "info",
  "major": Object {},
  "manager": "html",
  "managerBranchPrefix": "",
  "masterIssue": false,
  "masterIssueApproval": false,
  "masterIssueAutoclose": false,
  "masterIssueTitle": "Update Dependencies (Renovate Bot)",
  "minor": Object {},
  "npmToken": null,
  "npmrc": null,
  "onboarding": true,
  "onboardingBranch": "renovate/configure",
  "onboardingConfig": Object {
    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
  },
  "onboardingPrTitle": "Configure Renovate",
  "optimizeForDisabled": false,
  "packageRules": Array [],
  "password": null,
  "patch": Object {},
  "persistRepoData": false,
  "pin": Object {
    "commitMessageAction": "Pin",
    "group": Object {
      "commitMessageExtra": "",
      "commitMessageTopic": "dependencies",
    },
    "groupName": "Pin Dependencies",
    "groupSlug": "pin-dependencies",
    "rebaseWhen": "behind-base-branch",
    "recreateClosed": true,
    "unpublishSafe": false,
  },
  "pinDigests": false,
  "platform": "github",
  "postUpdateOptions": Array [],
  "postUpgradeTasks": Object {
    "commands": Array [],
    "fileFilters": Array [],
  },
  "prBodyColumns": Array [
    "Package",
    "Type",
    "Update",
    "Change",
  ],
  "prBodyDefinitions": Object {
    "Change": "\`{{{displayFrom}}}\` -> \`{{{displayTo}}}\`",
    "Current value": "{{{currentValue}}}",
    "New value": "{{{newValue}}}",
    "Package": "{{{depNameLinked}}}",
    "Package file": "{{{packageFile}}}",
    "References": "{{{references}}}",
    "Type": "{{{depType}}}",
    "Update": "{{{updateType}}}",
  },
  "prBodyNotes": Array [],
  "prCommitsPerRunLimit": 0,
  "prConcurrentLimit": 0,
  "prCreation": "immediate",
  "prFooter": "This PR has been generated by [Renovate Bot](https://github.com/renovatebot/renovate).",
  "prHourlyLimit": 0,
  "prNotPendingHours": 25,
  "prPriority": 0,
  "prTitle": null,
  "printConfig": false,
  "privateKey": null,
  "productLinks": Object {
    "documentation": "https://docs.renovatebot.com/",
    "help": "https://github.com/renovatebot/config-help/issues",
    "homepage": "https://github.com/renovatebot/renovate",
  },
  "pruneStaleBranches": true,
  "rangeStrategy": "replace",
  "rebaseLabel": "rebase",
  "rebaseWhen": "auto",
  "recreateClosed": false,
  "regexManagers": Array [],
  "registryUrls": null,
  "repositories": Array [],
  "requireConfig": true,
  "requiredStatusChecks": Array [],
  "respectLatest": true,
  "reviewers": Array [],
  "reviewersSampleSize": null,
  "rollbackPrs": false,
  "schedule": Array [
    "at any time",
  ],
  "semanticCommitScope": "deps",
  "semanticCommitType": "chore",
  "semanticCommits": null,
  "separateMajorMinor": true,
  "separateMinorPatch": false,
  "separateMultipleMajor": false,
  "skipInstalls": null,
  "stabilityDays": 0,
  "statusCheckVerify": false,
  "supportPolicy": Array [],
  "suppressNotifications": Array [
    "deprecationWarningIssues",
  ],
  "timezone": null,
  "token": null,
  "trustLevel": "low",
  "unicodeEmoji": false,
  "unpublishSafe": false,
  "updateLockFiles": true,
  "updateNotScheduled": true,
  "username": null,
  "versioning": "semver",
  "vulnerabilityAlerts": Object {
    "commitMessageSuffix": "[SECURITY]",
    "groupName": null,
    "masterIssueApproval": false,
    "rangeStrategy": "update-lockfile",
    "schedule": Array [],
  },
  "yarnrc": null,
}
`;

exports[`config/index mergeChildConfig(parentConfig, childConfig) merges 1`] = `
Object {
  "branchTopic": "lock-file-maintenance",
  "commitMessageAction": "Lock file maintenance",
  "commitMessageExtra": null,
  "commitMessageTopic": null,
  "enabled": false,
  "groupName": null,
  "prBodyDefinitions": Object {
    "Change": "All locks refreshed",
  },
  "rebaseStalePrs": true,
  "recreateClosed": true,
  "schedule": Array [
    "on monday",
  ],
}
`;
